# text-conversions

./: .gitignore  .stylish-haskell.yaml  .travis.yml  CHANGELOG.md  LICENSE  README.md  cabal.project  cabal.project.ci  package.yaml  stack-7.10.yaml  stack-8.0.yaml  stack.yaml  text-conversions.cabal
.github/workflows/: build.yml
src/Data/Text/: Conversions.hs
test/Data/Text/: ConversionsSpec.hs
