cabal-version: 2.4
name: text-conversions
version: 0.3.1.1
category: Data
build-type: Simple
synopsis: Safe conversions between textual types
description: Safe conversions between textual types

author: Alexis King
maintainer: Alexis King <lexi.lambda@gmail.com>
license: ISC
license-file: LICENSE
extra-source-files:
  README.md
  CHANGELOG.md
  LICENSE

homepage: https://github.com/cjdev/text-conversions
bug-reports: https://github.com/cjdev/text-conversions/issues

source-repository head
  type: git
  location: https://github.com/cjdev/text-conversions

common common
  default-language: Haskell2010
  default-extensions: FlexibleInstances MultiParamTypeClasses OverloadedStrings
  ghc-options: -Wall
  if impl(ghc >= 8.0.1)
    ghc-options: -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints

library
  import: common

  hs-source-dirs: src
  exposed-modules:
    Data.Text.Conversions

  build-depends:
    , base >=4.7 && <5
    , base16-bytestring <2
    , base64-bytestring <2
    , bytestring <1
    , text <3

test-suite text-conversions-test-suite
  import: common
  type: exitcode-stdio-1.0

  hs-source-dirs: test
  main-is: Main.hs
  other-modules:
    Data.Text.ConversionsSpec

  ghc-options: -rtsopts -threaded -with-rtsopts=-N

  build-depends:
    , base
    , bytestring
    , hspec
    , text
    , text-conversions
  build-tool-depends:
    hspec-discover:hspec-discover
